--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -106,4 +106,28 @@
     font-size: 22px;
     display: none;
 }
+.label-custom {
+    border-left: 1px solid #D0D4D9;
+    border-bottom: 1px solid #D0D4D9;
+    border-top: 1px solid #D0D4D9;
+    border-right: 1px solid #D0D4D9;
+    padding: 2px;
+    padding-top: 3px;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+.col-form-label {
+    padding-top: -webkit-calc(0.375rem + 1px);
+    padding-top: calc(0.375rem + 1px);
+    padding-bottom: -webkit-calc(0.375rem + 1px);
+    padding-bottom: calc(0.375rem + 1px);
+    margin-bottom: 0;
+    font-size: inherit;
+    
+}
+input.date-picker-custom {
+    width: 250px;
+    border: 1px solid #D0D4D9;
+    padding-left: 6px;
+}
 
